--- a/templates/views/partials/sidebar.html
+++ b/templates/views/partials/sidebar.html
@@ -37,13 +37,13 @@
              with font-awesome or any other icon font library -->
         <li class="nav-item">
           <a href="/bdm" class="nav-link">
-            <i class="nav-icon far fa-user-circle"></i>
+            <i class="nav-icon far fa-user-circle text-info"></i>
             <p>BDM</p>
           </a>
         </li>
         <li class="nav-item">
           <a href="/bdm-settings" class="nav-link">
-            <i class="nav-icon far fa-sun"></i>
+            <i class="nav-icon far fa-sun text-info"></i>
             <p>BDM Settings</p>
           </a>
         </li>
@@ -53,7 +53,7 @@
             href="/lead-management"
             class="nav-link {{navigation | activeNav 'lead_management'}}"
           >
-            <i class="nav-icon far fa-folder-open"></i>
+            <i class="nav-icon far fa-folder-open text-indigo"></i>
             <p>
               Lead Management
               <!-- <span class="right badge badge-danger">New</span> -->
@@ -63,19 +63,19 @@
         {{/if}}
         <li class="nav-item">
           <a href="/user-maintenance" class="nav-link">
-            <i class="nav-icon far fa-user"></i>
+            <i class="nav-icon far fa-user text-indigo"></i>
             <p>User Maintenance</p>
           </a>
         </li>
         <li class="nav-item">
           <a href="/user-online" class="nav-link">
-            <i class="nav-icon far fa-circle text-success"></i>
+            <i class="nav-icon far fa-circle text-indigo"></i>
             <p>User Online</p>
           </a>
         </li>
         <li class="nav-item">
           <a href="/logout" class="nav-link">
-            <i class="nav-icon far fa-window-close text-maroon"></i>
+            <i class="nav-icon far fa-window-close text-pink"></i>
             <p>Log Out</p>
           </a>
         </li>
