--- a/templates/views/user_maintenance_edit.html
+++ b/templates/views/user_maintenance_edit.html
@@ -1,4 +1,7 @@
-{{extend './layout.html'}} {{block 'content'}}
+<!-- layout -->
+{{extend './layout.html'}} 
+<!-- content -->
+{{block 'content'}}
 <div class="card">
   <form action="/user-maintenance/update" method="post">
     <div class="card-body">
@@ -14,29 +17,21 @@
         <label>First Name</label>
         <input 
           type="text" 
-          class="form-control {{if errors}}{{if errors.first_name}}is-invalid{{/if}}{{/if}}" 
+          class="form-control" 
           name="first_name" 
           value="{{if user}}{{user.first_name}}{{/if}}" 
         />
-        {{if errors}}
-          {{if errors.first_name}}
-            <small class="form-text text-danger">{{errors.first_name}}</small>
-          {{/if}}
-        {{/if}}
+        <small class="form-text text-danger" id="first_name_error"></small>
       </div>
       <div class="form-group">
         <label>Last Name</label>
         <input 
           type="text" 
-          class="form-control {{if errors}}{{if errors.last_name}}is-invalid{{/if}}{{/if}}" 
+          class="form-control" 
           name="last_name" 
           value="{{if user}}{{user.last_name}}{{/if}}" 
         />
-        {{if errors}}
-          {{if errors.last_name}}
-            <small class="form-text text-danger">{{errors.last_name}}</small>
-          {{/if}}
-        {{/if}}
+        <small class="form-text text-danger" id="last_name_error"></small>
       </div>
       <div class="form-group">
         <label>Phone Number</label>
@@ -51,33 +46,25 @@
         <label>Email</label>
         <input 
           type="email" 
-          class="form-control {{if errors}}{{if errors.email}}is-invalid{{/if}}{{/if}}" 
+          class="form-control" 
           name="email" 
           value="{{if user}}{{user.email}}{{/if}}" 
         />
-        {{if errors}}
-          {{if errors.email}}
-            <small class="form-text text-danger">{{errors.email}}</small>
-          {{/if}}
-        {{/if}}
+        <small class="form-text text-danger" id="email_error"></small>
       </div>
       <div class="form-group">
         <label>Password</label>
         <input 
           type="password" 
-          class="form-control {{if errors}}{{if errors.password}}is-invalid{{/if}}{{/if}}" 
+          class="form-control" 
           name="password" 
           value="{{if user}}{{user.password}}{{/if}}"
         />
-        {{if errors}}
-          {{if errors.password}}
-            <small class="form-text text-danger">{{errors.password}}</small>
-          {{/if}}
-        {{/if}}
+        <small class="form-text text-danger" id="password_error"></small>
       </div>
       <div class="form-group">
         <label>User Type</label>
-        <select class="form-control {{if errors}}{{if errors.type}}is-invalid{{/if}}{{/if}}" name="type">
+        <select class="form-control" name="type">
           {{each USER_TYPE}}
           <option 
             value="{{$value}}"
@@ -85,15 +72,11 @@
           >{{$value}}</option>
           {{/each}}
         </select>
-        {{if errors}}
-          {{if errors.first_name}}
-            <small class="form-text text-danger">{{errors.type}}</small>
-          {{/if}}
-        {{/if}}
+        <small class="form-text text-danger" id="type_error"></small>
       </div>
       <div class="form-group">
         <label>User Status</label>
-        <select class="form-control {{if errors}}{{if errors.status}}is-invalid{{/if}}{{/if}}" name="status">
+        <select class="form-control" name="status">
           {{each USER_STATUS}}
           <option 
             value="{{$value}}"
@@ -101,11 +84,7 @@
           >{{$value}}</option>
           {{/each}}
         </select>
-        {{if errors}}
-          {{if errors.status}}
-            <small class="form-text text-danger">{{errors.status}}</small>
-          {{/if}}
-        {{/if}}
+        <small class="form-text text-danger" id="status_error"></small>
       </div>
     </div>
     <div class="card-footer">
@@ -118,4 +97,17 @@
     </div>
   </form>
 </div>
+{{/block}}
+<!-- javascript -->
+{{block 'javascript'}}
+<script>
+  function handleError(key, value) {
+    $(`[name="${key}"]`).addClass('is-invalid')
+    $(`#${key}_error`).html(value)
+  }
+  
+  {{each errors}}
+    handleError(`{{$index}}`,`{{$value}}`)
+  {{/each}}
+</script>
 {{/block}}
