--- a/templates/views/bdm.html
+++ b/templates/views/bdm.html
@@ -47,26 +47,28 @@
           <div
             class="tab-pane fade pt-3 {{if $value._id.toString() == CURRENT_BDM_SETTING}}active show{{/if}}"
           >
-            <table class="table">
-              <thead>
-                <tr>
-                  <th>First Name</th>
-                  <th>Last Name</th>
-                  <th>Type</th>
-                  <th>Status</th>
-                </tr>
-              </thead>
-              <tbody>
-                {{each leads.docs}}
-                <tr>
-                  <td>{{$value.first_name | titleCase}}</td>
-                  <td>{{$value.last_name | titleCase}}</td>
-                  <td>{{$value.email}}</td>
-                  <td>{{$value.status | titleCase}}</td>
-                </tr>
-                {{/each}}
-              </tbody>
-            </table>
+            <div class="table-responsive">
+              <table class="table table-striped">
+                <thead>
+                  <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Email</th>
+                    <th>Status</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {{each leads.docs}}
+                  <tr>
+                    <td>{{$value.first_name | titleCase}}</td>
+                    <td>{{$value.last_name | titleCase}}</td>
+                    <td>{{$value.email}}</td>
+                    <td>{{$value.status | titleCase}}</td>
+                  </tr>
+                  {{/each}}
+                </tbody>
+              </table>
+            </div>
           </div>
           {{/each}}
         </div>
