--- a/templates/views/bdm_settings.html
+++ b/templates/views/bdm_settings.html
@@ -2,6 +2,11 @@
 <div class="row">
   <div class="col-md-3">
     <div class="card">
+      <div class="card-header">
+        <h3 class="card-title font-weight-bold">
+          <i class="fas fa-search"></i> Search
+        </h3>
+      </div>
       <div class="card-body">
         <div class="form-group">
           <label>Search</label>
@@ -46,11 +51,15 @@
       </div>
     </div>
     <div class="card">
+      <div class="card-header">
+        <h3 class="card-title font-weight-bold">
+          <i class="fas fa-cog"></i> Option
+        </h3>
+      </div>
       <div class="card-body">
         <div class="form-group">
-          <label>Option</label>
-          <a href="/bdm-settings/add" class="btn bg-info btn-block">
-            <i class="far fa-sun"></i>
+          <a href="/bdm-settings/add" class="btn bg-teal btn-block">
+            <i class="fas fa-plus"></i>
             Add Settings
           </a>
         </div>
@@ -59,35 +68,48 @@
   </div>
   <div class="col-md-9">
     <div class="card">
+      <div class="card-header">
+        <h3 class="card-title font-weight-bold">
+          <i class="fas fa-table"></i> Table
+        </h3>
+      </div>
       <div class="card-body p-0">
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Name</th>
-              <th>IFA</th>
-              <th>BDM</th>
-              <th>Status</th>
-              <th>Option</th>
-            </tr>
-          </thead>
-          <tbody>
-            {{each settings.docs}}
-            <tr>
-              <td>{{$value.name}}</td>
-              <td>{{$value.ifa_name | titleCase}}</td>
-              <td>{{$value.bdm_name| titleCase}}</td>
-              <td>{{$value.status | titleCase}}</td>
-              <td>
-                <a
-                  href="/bdm-settings/edit/{{$value._id.toString()}}"
-                  class="btn bg-info"
-                  >Edit</a
-                >
-              </td>
-            </tr>
-            {{/each}}
-          </tbody>
-        </table>
+        <div class="table-responsive">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>IFA</th>
+                <th>BDM</th>
+                <th>Status</th>
+                <th>Option</th>
+              </tr>
+            </thead>
+            <tbody>
+              {{each settings.docs}}
+              <tr>
+                <td>{{$value.name}}</td>
+                <td>{{$value.ifa_name | titleCase}}</td>
+                <td>{{$value.bdm_name| titleCase}}</td>
+                <td>{{$value.status | titleCase}}</td>
+                <td>
+                  <a
+                    href="/bdm-settings/edit/{{$value._id.toString()}}"
+                    class="btn bg-teal btn-sm"
+                    >
+                    <i class="fas fa-edit"></i> Edit</a
+                  >
+                  <a
+                    class="btn bg-maroon btn-sm"
+                    >
+                    <i class="fas fa-times"></i> Delete</a
+                  >
+                </td>
+              </tr>
+              {{/each}}
+            </tbody>
+          </table>
+        </div>
       </div>
       <div class="card-footer">
         <nav aria-label="Contacts Page Navigation">
