--- a/templates/views/partials/scripts.html
+++ b/templates/views/partials/scripts.html
@@ -24,3 +24,4 @@
   crossorigin="anonymous"
   referrerpolicy="no-referrer"
 ></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
