--- a/templates/views/user_maintenance_add.html
+++ b/templates/views/user_maintenance_add.html
@@ -4,7 +4,7 @@
 {{block 'content'}}
 <div class="card">
   <div class="card-body">
-    <form action="/user-maintenance/create" method="post">
+    <form action="/user-maintenance/create" method="post" id="formUserCreate">
       <div class="form-group">
         <label>First Name</label>
         <input 
@@ -69,8 +69,9 @@
       </div>
       <div class="form-group">
         <button 
-          type="submit" 
-          class="btn btn-success btn-block"
+          type="button" 
+          class="btn bg-teal btn-block"
+          id="btnUserCreate"
         >Add User</button>
       </div>
     </form>
@@ -81,9 +82,27 @@
 {{block 'javascript'}}
 <script>
   function handleError(key, value) {
-    $(`[name="${key}"]`).addClass('is-invalid')
-    $(`#${key}_error`).html(value)
+    $(`[name="${key}"]`).addClass('is-invalid');
+    $(`#${key}_error`).html(value);
   }
+
+  $(document).ready(function() {
+    $('#btnUserCreate').on('click', function() {
+      Swal.fire({
+        icon: 'question',
+        title: 'Do you really want to create the user?',
+        showCancelButton: true,
+        confirmButtonText: '<i class="fas fa-save"></i> Create',
+        confirmButtonColor: '#20c997',
+        cancelButtonText: '<i class="fas fa-times"></i> Cancel',
+        cancelButtonColor: '#d81b60',
+      }).then((result) => {
+        if (result.isConfirmed) {
+          $('#formUserCreate').submit();
+        }
+      });
+    });
+  });
 
   {{each errors}}
     handleError(`{{$index}}`,`{{$value}}`)
