--- a/templates/views/bdm_settings_add.html
+++ b/templates/views/bdm_settings_add.html
@@ -95,9 +95,9 @@
     $('#btnBdmSettingsCreate').on('click', function() {
       Swal.fire({
         icon: 'question',
-        title: 'Do you really want to update the BDM settings?',
+        title: 'Do you really want to create the BDM settings?',
         showCancelButton: true,
-        confirmButtonText: '<i class="fas fa-save"></i> Update',
+        confirmButtonText: '<i class="fas fa-save"></i> Create',
         confirmButtonColor: '#20c997',
         cancelButtonText: '<i class="fas fa-times"></i> Cancel',
         cancelButtonColor: '#d81b60',
