--- a/templates/views/partials/sidebar.html
+++ b/templates/views/partials/sidebar.html
@@ -41,9 +41,9 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="/bdm" class="nav-link">
+          <a href="/bdm-lead" class="nav-link">
             <i class="nav-icon far fa-user-circle text-info"></i>
-            <p>BDM</p>
+            <p>BDM Lead</p>
           </a>
         </li>
         <li class="nav-item">
