--- a/templates/views/user_maintenance_edit.html
+++ b/templates/views/user_maintenance_edit.html
@@ -3,16 +3,8 @@
 <!-- content -->
 {{block 'content'}}
 <div class="card">
-  <form action="/user-maintenance/update" method="post" id="formUserUpdate">
+  <form action="/user-maintenance/update/{{user._id.toString()}}" method="post" id="formUserUpdate">
     <div class="card-body">
-      <div class="form-group">
-        <input 
-          type="hidden" 
-          class="form-control" 
-          name="_id" 
-          value="{{if user}}{{user._id.toString()}}{{/if}}" 
-        />
-      </div>
       <div class="form-group">
         <label>First Name</label>
         <input 
