--- a/templates/views/lead_edit.html
+++ b/templates/views/lead_edit.html
@@ -165,8 +165,8 @@
           <div class="form-group">
             <button 
               onclick='submitUpdate()'
-              class="btn bg-teal btn-block"
-            >Update Lead</button>
+              class="btn bg-teal btn-block font-weight-bold"
+              ><i class="fas fa-save"></i> Update Lead</button>
           </div>
         </div>
     </div>
@@ -225,8 +225,8 @@
             <div class="form-group">
               <button 
                 onclick='submitStatusUpdate()'
-                class="btn bg-teal btn-block"
-              >Update Status</button>
+                class="btn bg-teal btn-block font-weight-bold"
+                ><i class="fas fa-save"></i> Update Status</button>
             </div>
           </div>
         </div>
