--- a/templates/views/lead_management_add.html
+++ b/templates/views/lead_management_add.html
@@ -151,8 +151,8 @@
       <div class="form-group">
         <button 
           type="submit" 
-          class="btn bg-teal btn-block"
-        >Create Lead</button>
+          class="btn bg-teal btn-block font-weight-bold"
+        ><i class="fas fa-save"></i> Create Lead</button>
       </div>
     </div>
   </form>
