--- a/templates/views/lead_management_edit.html
+++ b/templates/views/lead_management_edit.html
@@ -174,8 +174,8 @@
           <div class="form-group">
             <button 
               type="submit" 
-              class="btn bg-teal btn-block"
-            >Update Lead</button>
+              class="btn bg-teal btn-block font-weight-bold"
+            ><i class="fas fa-save"></i> Update Lead</button>
           </div>
         </div>
       </form>
