--- a/templates/views/lead.html
+++ b/templates/views/lead.html
@@ -3,10 +3,13 @@
   <div class="col-md-3">
 
     <div class="card">
+      <div class="card-header">
+        <h3 class="card-title font-weight-bold">
+          <i class="fas fa-search"></i> Search
+        </h3>
+      </div>
       <div class="card-body">
-
         <div class="form-group">
-          <label>Search</label>
           <input
             type="search"
             class="form-control"
@@ -52,30 +55,51 @@
   </div>
   <div class="col-md-9">
     <!--made by button to remove one search-->
-    <div class="card card-primary card-outline card-outline-tabs">
+    <div class="card">
       
-      <div class="card-body">
-        <div class="row">
+      <div class="card-header">
+        <h3 class="card-title font-weight-bold">
+          <i class="fas fa-table"></i> Table
+        </h3>
+      </div>
+      <div class="card-body p-0">
+        <div class="table-responsive">
           <table class="table table-striped table-hover">
             <thead>
               <tr>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Job Title</th>
-                <th>Company</th>
-                <th>Mobile</th>
+                <th><i class="far fa-user"></i> Full Name</th>
+                <th><i class="fas fa-briefcase"></i> Job Title</th>
+                <th><i class="far fa-building"></i> Company</th>
+                <th><i class="fas fa-mobile-alt"></i> Mobile</th>
+                <th><i class="far fa-id-badge"></i> Status</th>
               </tr>
             </thead>
             <tbody>
               <!--problem data cannot be copied-->
               {{each list.docs}}
-              <tr data-widget="expandable-table" 
-              onclick="window.location = '/lead/edit/{{$value.id}}'" >
-                <td>{{$value.first_name}}</td>
-                <td>{{$value.last_name}}</td>
-                <td>{{$value.job_title}}</td>
-                <td>{{$value.company}}</td>
-                <td>{{$value.mobile}}</td>
+              <tr>
+                <td>
+                  <i class="far fa-user"></i>
+                  <a
+                    href="/lead/edit/{{$value._id.toString()}}"
+                    rel="nofollow noopener noreferrer"
+                    class="text-info"
+                    id="user{{$index}}"
+                    data-ot="Click to view details"
+                    data-ot-delay="0"
+                    data-ot-tip-joint="bottom"
+                    data-ot-hide-delay="0"
+                    data-ot-target="#user{{$index}}"
+                    data-ot-fixed="true"
+                  >
+                    {{$value.first_name | titleCase}} {{$value.last_name |
+                    titleCase}}
+                  </a></td>
+                <td><i class="fas fa-briefcase"></i> {{$value.job_title}}</td>
+                <td><i class="far fa-building"></i> {{$value.company}}</td>
+                <td><i class="fas fa-mobile-alt"></i> {{$value.mobile}}</td>
+                <td>{{@$value.status | userStatusBadge}}</td>
+
               </tr>
               {{/each}}
             </tbody>
