--- a/templates/views/lead_management.html
+++ b/templates/views/lead_management.html
@@ -5,13 +5,17 @@
   <div class="col-md-3">
 
     <div class="card">
+      <div class="card-header">
+        <h3 class="card-title font-weight-bold">
+          <i class="fas fa-search"></i> Search
+        </h3>
+      </div>
       <div class="card-body">
 
         {{if (type == 'lead')}}
           <input type='hidden' id='batch' name='batch'>
           
           <div class="form-group">
-            <label>Search</label>  
             {{if search.batch}}
             <a href="/lead-management" class="btn bg-maroon btn-block form-control">
               <i class="fas fa-eraser"></i>
@@ -48,7 +52,7 @@
           </div>
           <div class="form-group">
             <select 
-              class="form-control" 
+              class="form-control select2bs4" 
               id="status" 
               name="status" 
               onchange="search(1);"
@@ -75,19 +79,23 @@
     </div>
 
     <div class="card">
+      <div class="card-header">
+        <h3 class="card-title font-weight-bold">
+          <i class="fas fa-cog"></i> Option
+        </h3>
+      </div>
       <div class="card-body">
         <div class="form-group">
-          <label>Option</label>
-            <a href="/lead-management/upload" class="btn bg-info btn-block">
+            <a href="/lead-management/upload" class="btn bg-teal btn-block font-weight-bold">
               <i class="fas fa-file-upload"></i>
               Upload File
             </a>
-            <a href="/lead-management/add" class="btn bg-info btn-block">
+            <a href="/lead-management/add" class="btn bg-teal btn-block font-weight-bold">
               <i class="fas fa-user-plus"></i>
               Add Lead
             </a>
             {{if (type == 'lead')}}
-              <a href="/lead-management" class="btn bg-info btn-block">
+              <a href="/lead-management" class="btn bg-teal btn-block font-weight-bold">
                 <i class="fas fa-user-check"></i>
                 Allocate
               </a>
@@ -113,7 +121,7 @@
             href=""
             onclick="window.location = '/lead-management?page=1&type=lead'"
             data-toggle="tab"
-            class="nav-link small text-uppercase {{if type == 'lead'}}active{{/if}}"
+            class="nav-link text-uppercase {{if type == 'lead'}}active{{/if}}"
             >Leads</a
           >
         </li>
@@ -122,82 +130,89 @@
             href=""
             onclick="window.location = '/lead-management?page=1&type=batch'"
             data-toggle="tab"
-            class="nav-link small text-uppercase {{if type == 'batch'}}active{{/if}}"
+            class="nav-link text-uppercase {{if type == 'batch'}}active{{/if}}"
             >Batches</a
           >
         </li>
       </ul>
       
-      <div class="card-body">
-        <div class="row">
-          {{if type == 'lead'}}
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th style='width: 1px'></th>
-                  <th>First Name</th>
-                  <th>Last Name</th>
-                  <th>Job Title</th>
-                  <th>Company</th>
-                  <th>Mobile</th>
-                  <th>Action</th>
-                </tr>
-              </thead>
-              <tbody>
-                {{each list.docs}}
-                <tr>
-                  <td>
-                    <div class="icheck-info d-inline">
-                      <input type="checkbox" id="checkbox_{{$index}}">
-                      <label for="checkbox_{{$index}}">
-                      </label>
-                    </div>
-                  </td>
-                  <td>{{$value.first_name}}</td>
-                  <td>{{$value.last_name}}</td>
-                  <td>{{$value.job_title}}</td>
-                  <td>{{$value.company}}</td>
-                  <td>{{$value.mobile}}</td>
-                  <td><a href="/lead-management/edit/{{$value.id}}" class="btn btn-sm bg-info mt-2">
-                    <i class="fas fa-user-edit"></i> Edit Lead
+      <div class="card-body p-0">
+        {{if type == 'lead'}}
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th style='width: 1px'></th>
+                <th><i class="far fa-user"></i> Full Name</th>
+                <th><i class="fas fa-briefcase"></i> Job Title</th>
+                <th><i class="far fa-building"></i> Company</th>
+                <th><i class="fas fa-mobile-alt"></i> Mobile</th>
+                <th><i class="far fa-id-badge"></i> Status</th>
+              </tr>
+            </thead>
+            <tbody>
+              {{each list.docs}}
+              <tr>
+                <td>
+                  <div class="icheck-info d-inline">
+                    <input type="checkbox" id="checkbox_{{$index}}">
+                    <label for="checkbox_{{$index}}">
+                    </label>
+                  </div>
+                </td>
+                <td>
+                  <i class="far fa-user"></i>
+                  <a
+                    href="/lead-management/edit/{{$value._id.toString()}}"
+                    rel="nofollow noopener noreferrer"
+                    class="text-info"
+                    id="user{{$index}}"
+                    data-ot="Click to view details"
+                    data-ot-delay="0"
+                    data-ot-tip-joint="bottom"
+                    data-ot-hide-delay="0"
+                    data-ot-target="#user{{$index}}"
+                    data-ot-fixed="true"
+                  >
+                    {{$value.first_name | titleCase}} {{$value.last_name |
+                    titleCase}}
                   </a></td>
-                </tr>
-                {{/each}}
-              </tbody>
-            </table>
-          {{else}}
-            {{each list.docs}}
-              <div class="col-md-4 p-2 pl-3 pr-3">
-                <!-- Widget: user widget style 2 -->
-                <div class="card card-widget widget-user-2 shadow">
-                  <div class="widget-user-header {{if $value.status == 'ACTIVE'}}bg-teal{{else}}bg-warning{{/if}}">
-                    <h3 class="">{{$value.upload_name}}</h3>
-                    <h5 class="">{{$value.created_at | formatDate}}</h5>
-                  </div>
-                  <div class="card-footer p-0">
-                    <ul class="nav flex-column">
-                      <li class="nav-item">
-                        <a href="/lead-management?page=1&type=lead&batch={{$value.id}}&status=ACTIVE" class="nav-link">
-                          ACTIVE <span class="float-right badge bg-teal">{{$value.uploaded}}</span>
-                        </a>
-                      </li>
-                      <li class="nav-item">
-                        <a href="/lead-management?page=1&type=lead&batch={{$value.id}}&status=INACTIVE" class="nav-link">
-                          INACTIVE <span class="float-right badge bg-maroon">{{$value.allocated}}</span>
-                        </a>
-                      </li>
-                      <!-- <li class="nav-item">
-                        <a href="#" class="nav-link">
-                          Remove <span class="float-right badge bg-danger">12</span>
-                        </a>
-                      </li> -->
-                    </ul>
-                  </div>
+                <td><i class="fas fa-briefcase"></i> {{$value.job_title}}</td>
+                <td><i class="far fa-building"></i> {{$value.company}}</td>
+                <td><i class="fas fa-mobile-alt"></i> {{$value.mobile}}</td>
+                <td>{{@$value.status | userStatusBadge}}</td>
+              </tr>
+              {{/each}}
+            </tbody>
+          </table>
+        {{else}}
+          <div class="row">
+          {{each list.docs}}
+            <div class="col-md-4 p-2 pl-3 pr-3">
+              <!-- Widget: user widget style 2 -->
+              <div class="card card-widget widget-user-2 shadow">
+                <div class="widget-user-header {{if $value.status == 'ACTIVE'}}bg-teal{{else}}bg-purple{{/if}}">
+                  <h3 class="">{{$value.upload_name}}</h3>
+                  <h5 class="">{{@$value.created_at | formatDate}}</h5>
+                </div>
+                <div class="card-footer p-0">
+                  <ul class="nav flex-column">
+                    <li class="nav-item">
+                      <a href="/lead-management?page=1&type=lead&batch={{$value.id}}&status=ACTIVE" class="nav-link">
+                        ACTIVE <span class="float-right badge bg-teal">{{$value.uploaded}}</span>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a href="/lead-management?page=1&type=lead&batch={{$value.id}}&status=INACTIVE" class="nav-link">
+                        INACTIVE <span class="float-right badge bg-maroon">{{$value.allocated}}</span>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </div>
-            {{/each}}
-          {{/if}}
-        </div>
+            </div>
+          {{/each}}
+          </div>
+        {{/if}}
       </div>
 
       <div class="card-footer">
@@ -251,6 +266,9 @@
   }
 
   $(function () {
+    $('.select2bs4').select2({
+      theme: 'bootstrap4',
+    });
     $('#pagination').html(pagination(page, totalPages, totalDocs, 'search'));
   });
   
