--- a/templates/views/lead_management_upload.html
+++ b/templates/views/lead_management_upload.html
@@ -28,13 +28,13 @@
         <small id="file_input_error" class="form-text text-danger"></small>
       </div>
       <div class="form-group">
-        <a href="/app/cbi_template.csv" class="btn bg-olive btn-block">
+        <a href="/app/cbi_template.csv" class="btn bg-teal btn-block font-weight-bold">
           <i class="fas fa-file-download"></i>
           Download Template
         </a>
       </div>
       <div class="form-group">
-        <button class="btn bg-info btn-block">
+        <button class="btn bg-info btn-block font-weight-bold">
           <i class="fas fa-file-upload"></i> Upload
         </button>
       </div>
