--- a/templates/views/bdm_settings.html
+++ b/templates/views/bdm_settings.html
@@ -9,10 +9,9 @@
       </div>
       <div class="card-body">
         <div class="form-group">
-          <label>Search</label>
           <input
             type="search"
-            class="form-control"
+            class="form-control form-control-sm"
             id="name"
             placeholder="Name"
             onsearch="search(1);"
@@ -20,7 +19,7 @@
         </div>
         <div class="form-group">
           <select
-            class="form-control select2bs4"
+            class="form-control form-control-sm select2bs4"
             id="ifa"
             onchange="search(1)"
             style="width: 100%"
@@ -35,7 +34,7 @@
         </div>
         <div class="form-group">
           <select
-            class="form-control select2bs4"
+            class="form-control form-control-sm select2bs4"
             id="bdm"
             onchange="search(1)"
             style="width: 100%"
