--- a/templates/views/bdm_settings_add.html
+++ b/templates/views/bdm_settings_add.html
@@ -6,7 +6,7 @@
         <label>Setting Name</label>
         <input
           type="text"
-          class="form-control"
+          class="form-control form-control-sm"
           name="name"
           value="{{if body}}{{body.name}}{{/if}}"
         />
@@ -15,7 +15,7 @@
       <div class="form-group">
         <label>IFA</label>
         <select
-          class="form-control select2bs4"
+          class="form-control form-control-sm select2bs4"
           name="ifa"
           style="width: 100%"
         >
@@ -34,7 +34,7 @@
       <div class="form-group">
         <label>BDM</label>
         <select
-          class="form-control select2bs4"
+          class="form-contro form-control-sm select2bs4"
           name="bdm"
           style="width: 100%"
         >
@@ -53,7 +53,7 @@
       <div class="form-group">
         <label>Status</label>
         <select
-          class="form-control select2bs4"
+          class="form-control form-control-sm select2bs4"
           name="status"
           style="width: 100%"
         >
