--- a/templates/views/partials/head.html
+++ b/templates/views/partials/head.html
@@ -48,5 +48,8 @@
   referrerpolicy="no-referrer"
 />
 <style>
-  
+  span.text-sm {
+    font-size: 0.715rem !important;
+    font-weight: bold;
+  }
 </style>
