--- a/templates/views/user_maintenance.html
+++ b/templates/views/user_maintenance.html
@@ -20,7 +20,7 @@
             </div>
             <input
               type="search"
-              class="form-control"
+              class="form-control form-control-sm"
               id="name"
               placeholder="Name, first name, last name"
               onsearch="search(1);"
@@ -29,7 +29,7 @@
         </div>
         <div class="form-group">
           <select
-            class="form-control select2bs4"
+            class="form-control form-control-sm select2bs4"
             id="type"
             onchange="search(1)"
             style="width: 100%"
@@ -42,7 +42,7 @@
         </div>
         <div class="form-group">
           <select
-            class="form-control select2bs4"
+            class="form-control form-control-sm select2bs4"
             id="status"
             onchange="search(1)"
             style="width: 100%"
