--- a/templates/views/bdm_lead_details.html
+++ b/templates/views/bdm_lead_details.html
@@ -3,12 +3,85 @@
 <!-- content -->
 {{block 'content'}}
 <div class="row">
-  <div class="card">
-    <div class="card-body">
-      {{lead.first_name}}<br>
-      {{lead.last_name}}<br>
-      {{lead.email}}<br>
-      {{lead.status}}<br>
+  <div class="col-sm-4">
+    <div class="card">
+      <div class="card-header">
+        <h3 class="card-title font-weight-bold">
+          <i class="fas fa-user"></i> Lead Info
+        </h3>
+      </div>
+      <div class="card-body">
+        <div class="form-group">
+          <div class="input-group">
+            <div class="input-group-append">
+              <span class="input-group-text text-sm">First Name</span>
+            </div>
+            <input
+              type="text"
+              class="form-control form-control-sm"
+              name="first_name"
+              value="{{lead.first_name}}"
+            />
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="input-group">
+            <div class="input-group-append">
+              <span class="input-group-text text-sm">Last Name</span>
+            </div>
+            <input
+              type="text"
+              class="form-control form-control-sm"
+              name="last_name"
+              value="{{lead.last_name}}"
+            />
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="input-group">
+            <div class="input-group-append">
+              <span class="input-group-text text-sm">Email</span>
+            </div>
+            <input
+              type="text"
+              class="form-control form-control-sm"
+              name="email"
+              value="{{lead.email}}"
+            />
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="input-group">
+            <div class="input-group-append">
+              <span class="input-group-text text-sm">Mobile</span>
+            </div>
+            <input
+              type="text"
+              class="form-control form-control-sm"
+              name="mobile"
+              value="{{lead.mobile}}"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-8">
+    <div class="card">
+      <div class="card-header">
+        <h3 class="card-title font-weight-bold">
+          <i class="fas fa-user"></i> Lead Status
+        </h3>
+      </div>
+      <div class="card-body"></div>
+    </div>
+    <div class="card">
+      <div class="card-header">
+        <h3 class="card-title font-weight-bold">
+          <i class="fas fa-user"></i> Lead Logs
+        </h3>
+      </div>
+      <div class="card-body"></div>
     </div>
   </div>
 </div>
