--- a/templates/views/user_maintenance_add.html
+++ b/templates/views/user_maintenance_add.html
@@ -9,7 +9,7 @@
         <label>First Name</label>
         <input 
           type="text" 
-          class="form-control" 
+          class="form-control form-control-sm" 
           name="first_name" 
           value="{{if user}}{{user.first_name}}{{/if}}" 
         />
@@ -19,7 +19,7 @@
         <label>Last Name</label>
         <input 
           type="text" 
-          class="form-control" 
+          class="form-control form-control-sm" 
           name="last_name" 
           value="{{if user}}{{user.last_name}}{{/if}}" 
         />
@@ -29,7 +29,7 @@
         <label>Phone Number</label>
         <input 
           type="text" 
-          class="form-control" 
+          class="form-control form-control-sm" 
           name="phone_number" 
           value="{{if user}}{{user.phone_number}}{{/if}}" 
         />
@@ -39,7 +39,7 @@
         <label>Email</label>
         <input 
           type="email" 
-          class="form-control" 
+          class="form-control form-control-sm" 
           name="email" value="{{if user}}{{user.email}}{{/if}}" 
         />
         <small class="form-text text-danger" id="email_error"></small>
@@ -48,7 +48,7 @@
         <label>Password</label>
         <input 
           type="password" 
-          class="form-control" 
+          class="form-control form-control-sm" 
           name="password" 
           value="{{if user}}{{user.password}}{{/if}}" 
         />
@@ -56,7 +56,7 @@
       </div>
       <div class="form-group">
         <label>User Type</label>
-        <select class="form-control" name="type">
+        <select class="form-control form-control-sm" name="type">
           <option value="">Select type</option>
           {{each USER_TYPE}}
           <option 
